--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.2.1"
   }
 }
